<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_card_string"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/questionString"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/questionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:gravity="top"
            android:textColor="@android:color/background_light"
            android:hint="@string/question_hint"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@android:color/background_light"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answerString"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/answerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:gravity="top"
            android:textColor="@android:color/background_light"
            android:hint="@string/answer_hint"
            android:backgroundTint="@android:color/background_light"

            />

    </LinearLayout>


</ScrollView>